fix modal centering issues on mobile

--- a/style.css
+++ b/style.css
@@ -60,8 +60,9 @@ input {
 	transition: color 2.0s;		
 }
 
-.ui.modal>.header {
+.ui.basic.modal>.header {
 	border: none;
+	padding: 1rem!important;
 }
 
 #paused {
